# turtlebot3Burger-server

configuration_files/slam_launch/: turtlebot3_gmapping.launch  turtlebot3_slam_slammap.launch
doc/face_rec/: api-objects.txt  class-tree.html  face_rec-pysrc.html  face_rec.src-module.html  face_rec.src-pysrc.html  face_rec.src.FaceRecognizer-module.html  face_rec.src.face_recognition_publisher-module.html  face_rec.src.face_recognition_publisher-pysrc.html  face_rec.src.face_recognition_subscriber-module.html  face_rec.src.face_recognition_subscriber.RecognitionSubscriber-class.html  help.html  redirect.html  toc-everything.html  toc-face_rec.src-module.html  toc-face_rec.src.FaceRecognizer-module.html  toc-face_rec.src.face_recognition_subscriber-module.html  toc.html
doc/human_robot_interaction/: api-objects.txt  class-tree.html  help.html  human_robot_interaction.src-pysrc.html  human_robot_interaction.src.action_handler-module.html  human_robot_interaction.src.action_handler.action_converter-class.html  human_robot_interaction.src.keyphrase_test-module.html  human_robot_interaction.src.kws_test-module.html  human_robot_interaction.src.kws_test-pysrc.html  toc.html  (+8 more)
face_rec/: CMakeLists.txt
human_robot_interaction/: CMakeLists.txt  package.xml  terminal_keyphrase_kws_action.sh
human_robot_interaction/dics_and_kwlists/: action_dictionary.dic
human_robot_interaction/launch/: keyphrase_kws_action.launch
human_robot_interaction/model/: Makefile.am
human_robot_interaction/src/: keyphrase_test.py
sensors/: CMakeLists.txt
turtlebot3Burger-server/: README.md
(+153 files in other folders)
